src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Calculated_Zone__c</fullName>
        <formula>IF(not(ispickval(Zone1__c, &quot;Off Zone&quot;)),  Zone__c , If (UnitPrice &lt;  PricebookEntry.X7__c ,8,If( UnitPrice &gt;=  PricebookEntry.X1__c , 1, If( UnitPrice&gt;= PricebookEntry.X2__c , 2,If( UnitPrice &gt;= PricebookEntry.X3__c , 3,If(UnitPrice &gt;= PricebookEntry.X4__c ,4,if(UnitPrice &gt;= PricebookEntry.X5__c ,5,If( UnitPrice &gt;= PricebookEntry.X6__c , 6,If( UnitPrice = PricebookEntry.X7__c , 7, Zone__c )))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Zone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_per_Gallon__c</fullName>
        <formula>ListPrice /(Value( PricebookEntry.Product2.Size__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price per Gallon</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Unit_Price__c</fullName>
        <formula>TotalPrice / Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zone1__c</fullName>
        <description>Zone for selection (To be used to populate other zone)</description>
        <label>Selected Zone</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Zone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <description>Zone for opportunity that is direct</description>
        <label>Calc Zone</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>Contact_as_Mandatory_when_Product_Exist</fullName>
        <active>true</active>
        <description>To make the contact field as mandatory, when we try to add product for the opportunity</description>
        <errorConditionFormula>ISBLANK(Opportunity.Primary_Contact__c)</errorConditionFormula>
        <errorMessage>You must add a Contact to the Opportunity before proceeding</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Zone</fullName>
        <active>true</active>
        <description>There must be a zone selected if it is a direct opty</description>
        <errorConditionFormula>AND( ispickval(Opportunity.Type, &quot;Direct&quot;), ispickval(Zone1__c,&quot;&quot; ))</errorConditionFormula>
        <errorDisplayField>Zone1__c</errorDisplayField>
        <errorMessage>You have created a &quot;Direct&quot; opportunity, you must select a Zone.</errorMessage>
    </validationRules>
</CustomObject>